[package]
name = "token-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_with = { version = "2.0.0", features = ["time_0_3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3", features = ["v4","serde"] }
validator = { version = "0.16.0", features = ["derive"] }
regex = "1.6.0"
once_cell = "1.13.0"
time = "0.3.11"
sqlx = { version = "0.7.2", features = ["runtime-async-std", "postgres", "macros"] }
random-string = "1.0"

# get all required types
chrono = { version = "0.4.*", features = ["serde"] }
crypto-lib = { path = "../crypto-lib"}
dotenvy = "0.15.1"
tokio = { version = "1.33", features = ["full"] }